--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,3 @@
 {
-    "extends": "./eslintOption.js",
-    "rules": {
-        "no-var": 1,
-        "no-console": 1
-    }
+    "extends": "./eslintOption.js"
 }
